# adm-kit

./: .gitignore  AGENTS.md  CHANGELOG.md  CLAUDE.md  README.md  pyproject.toml
.claude/rules/: architecture-guidelines.md  code-standards.md  development-workflow.md  testing-standards.md
.claude/skills/speckit-decompose/: SKILL.md
.claude/skills/speckit-pr/: SKILL.md
.claude/skills/speckit-selfreview/: SKILL.md
.github/: PULL_REQUEST_TEMPLATE.md
.github/workflows/: ci.yml  release.yml
.specify/: feature.json
.specify/integrations/: claude.manifest.json  speckit.manifest.json
.specify/memory/: constitution.md
.specify/workflows/: workflow-registry.json
memory/: constitution.md
specs/002-phase-templates/: data-model.md  plan.md  research.md  spec.md  tasks.md
specs/002-phase-templates/checklists/: requirements.md
specs/003-command-files/: plan.md  spec.md  tasks.md
specs/003-command-files/checklists/: requirements.md
specs/004-adm-init/: plan.md  spec.md  tasks.md
specs/005-adm-check/: data-model.md  plan.md  spec.md  tasks.md
specs/005-adm-check/checklists/: requirements.md
specs/006-adm-status/: plan.md  spec.md
specs/006-adm-status/checklists/: requirements.md
specs/007-phase-gates/: spec.md
specs/008-clarify-gate/: spec.md
specs/008-clarify-gate/checklists/: requirements.md
src/adm_cli/: __init__.py  agents.py  check.py  clarify.py  constants.py  gates.py  init.py  model.py  schema.py  semver.py  status.py
src/adm_cli/templates/: __init__.py
src/adm_cli/templates/commands/: clarify.md  invariants.md  inventory.md  lineage.md  model.md  thesis.md  validate.md
src/adm_cli/templates/phases/: 2-inventory.md  4-thesis.md  5-validate.md  7-model.md
templates/commands/: inventory.md  lineage.md  ratchet.md
templates/phases/: 1-lineage.md  3-invariants.md  6-ratchet.md
tests/: test_agents.py  test_check.py  test_clarify.py  test_cli.py  test_gates.py  test_init.py  test_integration.py  test_model.py  test_schema.py  test_semver.py  test_status.py
