[project]
name = "adm-cli"
version = "0.0.1"
description = "ADM CLI, part of ADM Kit. A tool for Analysis-Driven Modelling — discover and version data schemas from messy sources."
requires-python = ">=3.11"
dependencies = [
    "typer",
    "rich",
    "pydantic>=2.0",
    "platformdirs",
]

[project.scripts]
adm = "adm_cli:main"

[dependency-groups]
dev = [
    "pytest>=7.0",
    "pyright>=1.1",
]

[tool.pytest.ini_options]
testpaths = ["tests"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/adm_cli"]

[tool.hatch.build.targets.wheel.shared-data]

[tool.hatch.build.targets.sdist]
include = ["src/adm_cli/**"]
